styling changes for sign in and sign up pages

--- a/Sign-Up/sign-up.html
+++ b/Sign-Up/sign-up.html
@@ -16,15 +16,15 @@
                 </div>
                 <div class='signupField'>
                 <label for='email'>email</label>
-                <input type="textbox" id='email' class='emailSignup'>
+                <input type="textbox" id='email' class='emailSignup' placeholder="EMAIL ADRESS">
                 </div>
                 <div class='signupField'>
                 <label for='password'>password</label>
-                <input type='textbox' id='email' class='passwordSignup'>
+                <input type='textbox' id='email' class='passwordSignup' placeholder="PASSWORD">
                 </div>
                 <div class='signupField'>
                     <label for='password'>Confirm password</label>
-                    <input type='textbox' id='email' class='passwordConfirm'>
+                    <input type='textbox' id='email' class='passwordConfirm' placeholder="REPEAT PASSWORD">
                     </div >
             </div>
             <a href='#' class='signupBut'>sign-up</a>
