--- a/Login/login.html
+++ b/Login/login.html
@@ -16,11 +16,11 @@
                 </div>
                 <div class='loginField'>
                 <label for='email'>email</label>
-                <input type="textbox" id='email' class='emailLogin'>
+                <input type="textbox" id='email' class='emailLogin' placeholder="EMAIL ADRESS">
                 </div>
                 <div class='loginField'>
                 <label for='password'>password</label>
-                <input type='textbox' id='email' class='passwordLogin'>
+                <input type='textbox' id='email' class='passwordLogin' placeholder="PASSWORD">
                 </div >
             </div>
             <a href='#' class='loginBut'>LOGIN</a>
