--- a/Sign-Up/sign-up.html
+++ b/Sign-Up/sign-up.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel='stylesheet' href='styles.css'>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    </head>
-    <body>
-        <header>
-            <h1>Resteraunt de la stevens</h1>
-        </header>
-        <section>
-            <div id='signupBox'>
-                <div class='topBanner'>
-                <h2>Sign in</h2>
-                <div>
-                </div>
-                <div class='signupField'>
-                <label for='email'>email</label>
-                <input type="textbox" id='email' class='emailSignup' placeholder="EMAIL ADRESS">
-                </div>
-                <div class='signupField'>
-                <label for='password'>password</label>
-                <input type='textbox' id='email' class='passwordSignup' placeholder="PASSWORD">
-                </div>
-                <div class='signupField'>
-                    <label for='password'>Confirm password</label>
-                    <input type='textbox' id='email' class='passwordConfirm' placeholder="REPEAT PASSWORD">
-                    </div >
-            </div>
-            <a href='#' class='signupBut'>sign-up</a>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  </head>
 
-                <p>already have an account? <a href='../Login/login.html'>login</a></p>
-            </div>
-        </section>
-        <script src='script.js'></script>
-    </body>
+  <body>
+    <header>
+      <h1>Resteraunt de la stevens</h1>
+    </header>
+    <section>
+      <div id="signupBox">
+        <div class="topBanner">
+          <h2>Sign in</h2>
+          <div></div>
+          <div class="signupField">
+            <label for="email">email</label>
+            <input
+              type="textbox"
+              id="email"
+              class="emailSignup"
+              placeholder="EMAIL ADRESS"
+            />
+          </div>
+          <div class="signupField">
+            <label for="password">password</label>
+            <input
+              type="textbox"
+              id="email"
+              class="passwordSignup"
+              placeholder="PASSWORD"
+            />
+          </div>
+          <div class="signupField">
+            <label for="password">Confirm password</label>
+            <input
+              type="textbox"
+              id="email"
+              class="passwordConfirm"
+              placeholder="REPEAT PASSWORD"
+            />
+          </div>
+        </div>
+        <a href="#" class="signupBut">sign-up</a>
+
+        <p>already have an account? <a href="../Login/login.html">login</a></p>
+      </div>
+    </section>
+    <script src="script.js"></script>
+  </body>
 </html>
