added inital JS for manager site

--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -44,6 +44,13 @@
       <img src="all-consuming-void.jpg" alt="p̷̼̬͓̩̞͌̈́̇̑̃̀͘͝a̶̧͍͓͓̰̘͙̫͇̣̯͌́̀͋͛͂̇͊́̅͂͂͜ͅͅr̴̢͓̱̤̹̝̞͠t̴̢̛̬̮̰͎̝̤̼̖̮̿̎̀̀͆̀̓̑͠ ̸͍̫͇̂́̔̇̑̒̓͑̀̌͝͝o̵̡͍̦̥̝̗͙̠̝̭̬̟̫̺̰͐͋̉̄̿̃͑͝f̸̠̪̘̯̝̪̯͕͕͉͕̱̯́̏̆̓́ ̵̨͈̞̊̏̂̐͊̆̈́̕͝ä̴̢̛̛͚͍̼̦̙̰̼̱͉͙͎͖́̏̅̉͒̍̓̔̈́̎̋͘͜ ̷̢̡̛̣̯̯̞̗̪̀͋̒̚͠b̷̛̙̪͔̜͖̮̣̗͂̏̉͂͋̌̊̒̈̕̚à̴̞̻̐̑͐̓̊̚̕l̶̠̳̰̪̩̦̖̞͙͇̻̯̗͉̃̄̈́͒͘ͅạ̶͙̖̩͙̍͒͌͂̆̈́͝ñ̴̥̼̬̫̐̿̂̋̉̔̇̚c̴̟̯̜͙̹͙̦̲̹̮͖͉̤̍͂̊́͊̈́̏̄͐̐̑̽͘̚͠ͅͅė̶̗̟̥̻̬͇̰̺̰͚̃̈́͠d̴͇̱̽ ̵̧̣̳͔͍̞͍̩̬̖̪̂̔̇̾͌͐͐́̑͒̚b̷̢̛̙̠̙̙͍̳͙̥̭̥̪͙̫̱̽͂̃̍̉̉̊̋̅̄̏͘͘r̶̦͊̑͑̃̐͝ȩ̵̼̞̘̙̈͌̾́̃͑̄̇́͋̓͆̀̕͘a̶̲̪͈̬̮͓̹͇͖͍̽̕k̷̛͍̖̐͆͗͒̓̆͋͒f̴͖͉͚͉̰̤̼̘͕̰̺̪̞̖̈́̆̅̈́͛͆̍̇͒̒̍̽̉̐s̵̹̭̘̦̲̠͈̖̝̲̦̞̙̫̖̈́̾̅͗t̸̪͈̭̬̞̽͐̆͗̃͗̌̒̊̍̅̏̚̚" />
     </div>
   </div>
+
+  <form action="#" method="GET" role="form" enctype="multipart/form-data">
+    <input class='nameNew' type="text" placeholder="Name" name="name">
+    <input class='costNew' type='text' placeholder='$' name='cost'>
+    <input type="file" name="img" single id='file'>
+     <button type="submit" id='upload'>Submit </button>
+   </form>
   <script src='script.js'></script>
 </body>
 </html>
