--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -3,28 +3,32 @@
 <html>
     <title>Manager Page</title>
 
-    <h1>The Menu</h1>
-    <div class="menu-box">
-        <div class="menu-items">
-            <img src="large-fry.jpg" alt="a comically large fry">
-            <img src="endless-chicken-nuggets.jpg" alt="endless chicken nuggets">
-            <img src="foot-lettuce.png" alt="number 15 burger king foot lettuce">
-            <img src="hot-dog-stack.jpg" alt="hot dog jenga">
-            <img src="shrimp.jpg" alt="shucked shrimp">
-            <img src="shrimp-with-head.jpg" alt="unshucked shrimp">
-            <img src="totally-sugar.jpg" alt="not cocaine">
-            <img src="tri-wich.jpg" alt="the ultimate sandwich">
-            <img src="whatever-this-is.jpg" alt="how did we eat this shit when we were kids">
-            <img src="wood.jpg" alt="fiber globule">
-            <img src="fortnite-burger.jpg" alt="fortniteburger.net">
-            <img src="rare-iron.jpg" alt="barely lega- cooked iron">
-            <img src="cooked-iron.png" alt="this shit dry af">
-            <img src="cow.jpg" alt="protein globule">
-            <img src="killer-pig.jpg" alt="DO NOT APPROACH DO NOT APPROACH DO NOT APPROACH DO NOT APPROACH DO NOT APPRO">
-            <img src="our-waitress.jpg" alt="this isn't sexual but can a cannibal eat her already">
-            <img src="eaten-cob.jpg" alt="sorry i got hungry :(">
-            <img src="eaten-sandwich.gif" alt="sorry man i just couldn't help myself :(((((((((((">
-            <img src="all-consuming-void.jpg" alt="p̷̼̬͓̩̞͌̈́̇̑̃̀͘͝a̶̧͍͓͓̰̘͙̫͇̣̯͌́̀͋͛͂̇͊́̅͂͂͜ͅͅr̴̢͓̱̤̹̝̞͠t̴̢̛̬̮̰͎̝̤̼̖̮̿̎̀̀͆̀̓̑͠ ̸͍̫͇̂́̔̇̑̒̓͑̀̌͝͝o̵̡͍̦̥̝̗͙̠̝̭̬̟̫̺̰͐͋̉̄̿̃͑͝f̸̠̪̘̯̝̪̯͕͕͉͕̱̯́̏̆̓́ ̵̨͈̞̊̏̂̐͊̆̈́̕͝ä̴̢̛̛͚͍̼̦̙̰̼̱͉͙͎͖́̏̅̉͒̍̓̔̈́̎̋͘͜ ̷̢̡̛̣̯̯̞̗̪̀͋̒̚͠b̷̛̙̪͔̜͖̮̣̗͂̏̉͂͋̌̊̒̈̕̚à̴̞̻̐̑͐̓̊̚̕l̶̠̳̰̪̩̦̖̞͙͇̻̯̗͉̃̄̈́͒͘ͅạ̶͙̖̩͙̍͒͌͂̆̈́͝ñ̴̥̼̬̫̐̿̂̋̉̔̇̚c̴̟̯̜͙̹͙̦̲̹̮͖͉̤̍͂̊́͊̈́̏̄͐̐̑̽͘̚͠ͅͅė̶̗̟̥̻̬͇̰̺̰͚̃̈́͠d̴͇̱̽ ̵̧̣̳͔͍̞͍̩̬̖̪̂̔̇̾͌͐͐́̑͒̚b̷̢̛̙̠̙̙͍̳͙̥̭̥̪͙̫̱̽͂̃̍̉̉̊̋̅̄̏͘͘r̶̦͊̑͑̃̐͝ȩ̵̼̞̘̙̈͌̾́̃͑̄̇́͋̓͆̀̕͘a̶̲̪͈̬̮͓̹͇͖͍̽̕k̷̛͍̖̐͆͗͒̓̆͋͒f̴͖͉͚͉̰̤̼̘͕̰̺̪̞̖̈́̆̅̈́͛͆̍̇͒̒̍̽̉̐s̵̹̭̘̦̲̠͈̖̝̲̦̞̙̫̖̈́̾̅͗t̸̪͈̭̬̞̽͐̆͗̃͗̌̒̊̍̅̏̚̚">
-        </div>
+  <title>Manager Page</title>
+  </head>
+<body>
+  <h1>The Menu</h1>
+  <div class="menu-box">
+    <div class="menu-items">
+        <ul>
+            <li><img src="large-fry.jpg" alt="a comically large fry" /></li>
+            <li><img src="endless-chicken-nuggets.jpg" alt="endless chicken nuggets" /></li>
+            <li><img src="foot-lettuce.png" alt="number 15 burger king foot lettuce" /></li>
+            <li><img src="hot-dog-stack.jpg" alt="hot dog jenga" /></li>
+            <li><img src="shrimp.jpg" alt="shucked shrimp" /></li>
+            <li><img src="shrimp-with-head.jpg" alt="unshucked shrimp" /></li>
+            <li><img src="totally-sugar.jpg" alt="just regular old sugar" /></li>
+            <li><img src="tri-wich.jpg" alt="the ultimate sandwich" /></li>
+            <li><img src="whatever-this-is.jpg" alt="how did we eat this stuff when we were kids"/></li>
+            <li><img src="wood.jpg" alt="fiber globule" /></li>
+            <li><img src="fortnite-burger.jpg" alt="fortniteburger.net" /></li>
+            <li><img src="rare-iron.jpg" alt="uncooked iron" /></li>
+            <li><img src="cooked-iron.png" alt="cooked iron" /></li>
+            <li><img src="cow.jpg" alt="protein globule" /></li>
+            <li><img src="killer-pig.jpg" alt="DO NOT APPROACH DO NOT APPROACH DO NOT APPROACH DO NOT APPROACH DO NOT APPRO"/></li>
+            <li><img src="our-waitress.jpg" alt="our vegan option"/></li>
+            <li><img src="eaten-cob.jpg" alt="sorry i got hungry :(" /></li>
+            <li><img src="eaten-sandwich.gif" alt="sorry man i just couldn't help myself :((((((((((("/></li>
+            <li><img src="all-consuming-void.jpg" alt="p̷̼̬͓̩̞͌̈́̇̑̃̀͘͝a̶̧͍͓͓̰̘͙̫͇̣̯͌́̀͋͛͂̇͊́̅͂͂͜ͅͅr̴̢͓̱̤̹̝̞͠t̴̢̛̬̮̰͎̝̤̼̖̮̿̎̀̀͆̀̓̑͠ ̸͍̫͇̂́̔̇̑̒̓͑̀̌͝͝o̵̡͍̦̥̝̗͙̠̝̭̬̟̫̺̰͐͋̉̄̿̃͑͝f̸̠̪̘̯̝̪̯͕͕͉͕̱̯́̏̆̓́ ̵̨͈̞̊̏̂̐͊̆̈́̕͝ä̴̢̛̛͚͍̼̦̙̰̼̱͉͙͎͖́̏̅̉͒̍̓̔̈́̎̋͘͜ ̷̢̡̛̣̯̯̞̗̪̀͋̒̚͠b̷̛̙̪͔̜͖̮̣̗͂̏̉͂͋̌̊̒̈̕̚à̴̞̻̐̑͐̓̊̚̕l̶̠̳̰̪̩̦̖̞͙͇̻̯̗͉̃̄̈́͒͘ͅạ̶͙̖̩͙̍͒͌͂̆̈́͝ñ̴̥̼̬̫̐̿̂̋̉̔̇̚c̴̟̯̜͙̹͙̦̲̹̮͖͉̤̍͂̊́͊̈́̏̄͐̐̑̽͘̚͠ͅͅė̶̗̟̥̻̬͇̰̺̰͚̃̈́͠d̴͇̱̽ ̵̧̣̳͔͍̞͍̩̬̖̪̂̔̇̾͌͐͐́̑͒̚b̷̢̛̙̠̙̙͍̳͙̥̭̥̪͙̫̱̽͂̃̍̉̉̊̋̅̄̏͘͘r̶̦͊̑͑̃̐͝ȩ̵̼̞̘̙̈͌̾́̃͑̄̇́͋̓͆̀̕͘a̶̲̪͈̬̮͓̹͇͖͍̽̕k̷̛͍̖̐͆͗͒̓̆͋͒f̴͖͉͚͉̰̤̼̘͕̰̺̪̞̖̈́̆̅̈́͛͆̍̇͒̒̍̽̉̐s̵̹̭̘̦̲̠͈̖̝̲̦̞̙̫̖̈́̾̅͗t̸̪͈̭̬̞̽͐̆͗̃͗̌̒̊̍̅̏̚̚" /></li>
+        </ul>
     </div>
 </html>
