--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -14,7 +14,7 @@
         <ul>
             <li><img src="large-fry.jpg" alt="a comically large fry" /></li>
             <li><img src="endless-chicken-nuggets.jpg" alt="endless chicken nuggets" /></li>
-            <li><img src="foot-lettuce.png" alt="number 15 burger king foot lettuce" /></li>
+            <li><img src="lettuce.jpg" alt="lettuce commence" /></li>
             <li><img src="hot-dog-stack.jpg" alt="hot dog jenga" /></li>
             <li><img src="shrimp.jpg" alt="shucked shrimp" /></li>
             <li><img src="shrimp-with-head.jpg" alt="unshucked shrimp" /></li>
@@ -26,11 +26,12 @@
             <li><img src="rare-iron.jpg" alt="uncooked iron" /></li>
             <li><img src="cooked-iron.png" alt="cooked iron" /></li>
             <li><img src="cow.jpg" alt="protein globule" /></li>
-            <li><img src="killer-pig.jpg" alt="DO NOT APPROACH DO NOT APPROACH DO NOT APPROACH DO NOT APPROACH DO NOT APPRO"/></li>
-            <li><img src="our-waitress.jpg" alt="our vegan option"/></li>
+            <li><img src="velvet.png" alt="velvet.png"/></li>
+            <li><img src="water-sausage.jpg" alt="Typhia L."/></li>
             <li><img src="eaten-cob.jpg" alt="sorry i got hungry :(" /></li>
-            <li><img src="eaten-sandwich.gif" alt="sorry man i just couldn't help myself :((((((((((("/></li>
-            <li><img src="all-consuming-void.jpg" alt="p̷̼̬͓̩̞͌̈́̇̑̃̀͘͝a̶̧͍͓͓̰̘͙̫͇̣̯͌́̀͋͛͂̇͊́̅͂͂͜ͅͅr̴̢͓̱̤̹̝̞͠t̴̢̛̬̮̰͎̝̤̼̖̮̿̎̀̀͆̀̓̑͠ ̸͍̫͇̂́̔̇̑̒̓͑̀̌͝͝o̵̡͍̦̥̝̗͙̠̝̭̬̟̫̺̰͐͋̉̄̿̃͑͝f̸̠̪̘̯̝̪̯͕͕͉͕̱̯́̏̆̓́ ̵̨͈̞̊̏̂̐͊̆̈́̕͝ä̴̢̛̛͚͍̼̦̙̰̼̱͉͙͎͖́̏̅̉͒̍̓̔̈́̎̋͘͜ ̷̢̡̛̣̯̯̞̗̪̀͋̒̚͠b̷̛̙̪͔̜͖̮̣̗͂̏̉͂͋̌̊̒̈̕̚à̴̞̻̐̑͐̓̊̚̕l̶̠̳̰̪̩̦̖̞͙͇̻̯̗͉̃̄̈́͒͘ͅạ̶͙̖̩͙̍͒͌͂̆̈́͝ñ̴̥̼̬̫̐̿̂̋̉̔̇̚c̴̟̯̜͙̹͙̦̲̹̮͖͉̤̍͂̊́͊̈́̏̄͐̐̑̽͘̚͠ͅͅė̶̗̟̥̻̬͇̰̺̰͚̃̈́͠d̴͇̱̽ ̵̧̣̳͔͍̞͍̩̬̖̪̂̔̇̾͌͐͐́̑͒̚b̷̢̛̙̠̙̙͍̳͙̥̭̥̪͙̫̱̽͂̃̍̉̉̊̋̅̄̏͘͘r̶̦͊̑͑̃̐͝ȩ̵̼̞̘̙̈͌̾́̃͑̄̇́͋̓͆̀̕͘a̶̲̪͈̬̮͓̹͇͖͍̽̕k̷̛͍̖̐͆͗͒̓̆͋͒f̴͖͉͚͉̰̤̼̘͕̰̺̪̞̖̈́̆̅̈́͛͆̍̇͒̒̍̽̉̐s̵̹̭̘̦̲̠͈̖̝̲̦̞̙̫̖̈́̾̅͗t̸̪͈̭̬̞̽͐̆͗̃͗̌̒̊̍̅̏̚̚" /></li>
+            <li><img src="eaten-sandwich.gif" alt="sorry man i just couldn't help myself :("/></li>
+            <li><img src="all-consuming-void.jpg" alt="great for dieting" /></li>
+            <li><img src="chug-jug.png" alt="the only drink available"></li>
         </ul>
     </div>
   </div>
