--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -14,35 +14,35 @@
       <div class="menu-items">
         <img src="large-fry.jpg" alt="a comically large fry" />
         <img src="endless-chicken-nuggets.jpg" alt="endless chicken nuggets" />
-        <img src="foot-lettuce.png" alt="number 15 burger king foot lettuce" />
+        <img src="lettuce.png" alt="lettuce commence" />
         <img src="hot-dog-stack.jpg" alt="hot dog jenga" />
         <img src="shrimp.jpg" alt="shucked shrimp" />
         <img src="shrimp-with-head.jpg" alt="unshucked shrimp" />
-        <img src="totally-sugar.jpg" alt="not cocaine" />
+        <img src="totally-sugar.jpg" alt="just suagr" />
         <img src="tri-wich.jpg" alt="the ultimate sandwich" />
         <img
           src="whatever-this-is.jpg"
-          alt="how did we eat this shit when we were kids"
+          alt="how did we eat this when we were kids"
         />
         <img src="wood.jpg" alt="fiber globule" />
         <img src="fortnite-burger.jpg" alt="fortniteburger.net" />
-        <img src="rare-iron.jpg" alt="barely lega- cooked iron" />
-        <img src="cooked-iron.png" alt="this shit dry af" />
+        <img src="rare-iron.jpg" alt="uncooked iron" />
+        <img src="cooked-iron.png" alt="cooked iron" />
         <img src="cow.jpg" alt="protein globule" />
         <img
-          src="killer-pig.jpg"
-          alt="DO NOT APPROACH DO NOT APPROACH DO NOT APPROACH DO NOT APPROACH DO NOT APPRO"
+          src="water-sausage.jpg"
+          alt="Typhia L."
         />
         <img
-          src="our-waitress.jpg"
-          alt="this isn't sexual but can a cannibal eat her already"
+          src="velvet.png"
+          alt="velvet cake"
         />
         <img src="eaten-cob.jpg" alt="sorry i got hungry :(" />
         <img
           src="eaten-sandwich.gif"
-          alt="sorry man i just couldn't help myself :((((((((((("
+          alt="sorry man i just couldn't help myself :("
         />
-        <img src="all-consuming-void.jpg" alt="p̷̼̬͓̩̞͌̈́̇̑̃̀͘͝a̶̧͍͓͓̰̘͙̫͇̣̯͌́̀͋͛͂̇͊́̅͂͂͜ͅͅr̴̢͓̱̤̹̝̞͠t̴̢̛̬̮̰͎̝̤̼̖̮̿̎̀̀͆̀̓̑͠ ̸͍̫͇̂́̔̇̑̒̓͑̀̌͝͝o̵̡͍̦̥̝̗͙̠̝̭̬̟̫̺̰͐͋̉̄̿̃͑͝f̸̠̪̘̯̝̪̯͕͕͉͕̱̯́̏̆̓́ ̵̨͈̞̊̏̂̐͊̆̈́̕͝ä̴̢̛̛͚͍̼̦̙̰̼̱͉͙͎͖́̏̅̉͒̍̓̔̈́̎̋͘͜ ̷̢̡̛̣̯̯̞̗̪̀͋̒̚͠b̷̛̙̪͔̜͖̮̣̗͂̏̉͂͋̌̊̒̈̕̚à̴̞̻̐̑͐̓̊̚̕l̶̠̳̰̪̩̦̖̞͙͇̻̯̗͉̃̄̈́͒͘ͅạ̶͙̖̩͙̍͒͌͂̆̈́͝ñ̴̥̼̬̫̐̿̂̋̉̔̇̚c̴̟̯̜͙̹͙̦̲̹̮͖͉̤̍͂̊́͊̈́̏̄͐̐̑̽͘̚͠ͅͅė̶̗̟̥̻̬͇̰̺̰͚̃̈́͠d̴͇̱̽ ̵̧̣̳͔͍̞͍̩̬̖̪̂̔̇̾͌͐͐́̑͒̚b̷̢̛̙̠̙̙͍̳͙̥̭̥̪͙̫̱̽͂̃̍̉̉̊̋̅̄̏͘͘r̶̦͊̑͑̃̐͝ȩ̵̼̞̘̙̈͌̾́̃͑̄̇́͋̓͆̀̕͘a̶̲̪͈̬̮͓̹͇͖͍̽̕k̷̛͍̖̐͆͗͒̓̆͋͒f̴͖͉͚͉̰̤̼̘͕̰̺̪̞̖̈́̆̅̈́͛͆̍̇͒̒̍̽̉̐s̵̹̭̘̦̲̠͈̖̝̲̦̞̙̫̖̈́̾̅͗t̸̪͈̭̬̞̽͐̆͗̃͗̌̒̊̍̅̏̚̚" />
+        <img src="all-consuming-void.jpg" alt="our calorie free, vegan option" />
       </div>
 
 <body>
