updates done by...

--- a/payment/payment.html
+++ b/payment/payment.html
@@ -11,11 +11,20 @@
             <h2>Price</h2>
             <h2>Delete</h2>
         </div>
+
             <div class="btn">
           <a onClick="thankyou" id="card" href="../recipt-page/reciept.html">Card</a>
           <a onClick="thankyou" id="cash" href="../recipt-page/reciept.html">Cash</a>
           <a href="../menue/menue.html">Return</a>
             </div>
+
+            <div class="options">
+                <label for="cars">Choose Pickup or Delivery:</label>
+  <select name="dev" id="pick">
+    <option>Pick Up</option>
+    <option>Delivery</option>
+            </div>
+        </select>
         </article> 
     </div>
   <script src="script.js"></script>  
