--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <h1>The Menu</h1>
+    <h1>The Menu</h1><hr>
       <div class="menu-box">
         <div class="menu-items">
           <ul>
@@ -24,10 +24,10 @@
             <li><img src="whatever-this-is.jpg" alt="how did we eat this stuff when we were kids"/></li>
             <li><img src="wood.jpg" alt="fiber globule" /></li>
             <li><img src="fortnite-burger.jpg" alt="fortniteburger.net" /></li>
-            <li><img src="rare-iron.jpg" alt="uncooked iron" /></li>
-            <li><img src="cooked-iron.png" alt="cooked iron" /></li>
+            <li><img src="rare-iron.jpg" alt="medium-rare iron" /></li>
+            <li><img src="cooked-iron.png" alt="well-done iron" /></li>
             <li><img src="cow.jpg" alt="protein globule" /></li>
-            <li><img src="velvet.png" alt="velvet.png"/></li>
+            <li><img src="velvet.png" alt="unfortunately not made of the color red"/></li>
             <li><img src="water-sausage.jpg" alt="Typhia L."/></li>
             <li><img src="eaten-cob.jpg" alt="sorry i got hungry :(" /></li>
             <li><img src="eaten-sandwich.gif" alt="sorry man i just couldn't help myself :("/></li>
