fixed errors from shams and added the email function 1

--- a/Sign-Up/sign-up.html
+++ b/Sign-Up/sign-up.html
@@ -1,4 +1,4 @@
->>>>>>> main<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
@@ -12,10 +12,9 @@
     <section>
       <div id="signupBox">
         <div class="topBanner">
-          <h2>Sign in</h2>
-          <div></div>
+          <h2>Sign Up</h2>
           <div class="signupField">
-            <label for="email">email</label>
+            <label for="email">EMAIL</label>
             <input
               type="textbox"
               id="email"
@@ -24,27 +23,28 @@
             />
           </div>
           <div class="signupField">
-            <label for="password">password</label>
+            <label for="password">PASSWORD</label>
             <input
-              type="textbox"
+              type="password"
               id="email"
               class="passwordSignup"
               placeholder="PASSWORD"
             />
           </div>
           <div class="signupField">
-            <label for="password">Confirm password</label>
+            <label for="password">CONFIRM-PASSWORD</label>
             <input
-              type="textbox"
+              type="password"
               id="email"
               class="passwordConfirm"
               placeholder="REPEAT PASSWORD"
             />
           </div>
         </div>
+        <div>
         <a href="#" class="signupBut">sign-up</a>
-
         <p>already have an account? <a href="../Login/login.html">login</a></p>
+      </div>
       </div>
     </section>
     <script src="script.js"></script>
