--- a/Login/login.html
+++ b/Login/login.html
@@ -12,10 +12,10 @@
     <section>
       <div id="loginBox">
         <div class="topBanner">
-          <h2>Sign in</h2>
+          <h2>Sign In</h2>
           <div></div>
           <div class="loginField">
-            <label for="email">email</label>
+            <label for="email">EMAIL</label>
             <input
               type="textbox"
               id="email"
@@ -24,18 +24,19 @@
             />
           </div>
           <div class="loginField">
-            <label for="password">password</label>
+            <label for="password">PASSWORD</label>
             <input
-              type="textbox"
+              type="password"
               id="email"
               class="passwordLogin"
               placeholder="PASSWORD"
             />
           </div>
         </div>
+        <div>
         <a href="#" class="loginBut">LOGIN</a>
-
         <p>Not a user? <a href="../Sign-Up/sign-up.html">Sign-Up</a></p>
+      </div>
       </div>
     </section>
     <script src="script.js"></script>
