--- a/recipt-page/reciept.html
+++ b/recipt-page/reciept.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+
 </head>
 
 
@@ -15,5 +19,6 @@
     </div>
 
     </div>
+    <script src='script.js0'></script>
 </body>
 </html>
