fixed convert image to data URL

--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -39,7 +39,7 @@
 
     <input class="nameNew" type="text" placeholder="Name" name="name" />
     <input class="costNew" type="text" placeholder="$" name="cost" />
-    <input type="file" name="img" id="file" accept="image" />
+    <input type="file" name="img" id="file" accept="image" class='fileUploader'/>
     <button type="submit" id="upload">Submit</button>
 
     <script src="script.js"></script>
