added remove item system

--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -36,11 +36,16 @@
         </ul>
 
     </div>
-
+<div>
     <input class="nameNew" type="text" placeholder="Name" name="name" />
     <input class="costNew" type="text" placeholder="$" name="cost" />
     <input type="file" name="img" id="file" accept="image" class='fileUploader'/>
-    <button type="submit" id="upload">Submit</button>
+    <button type="submit" id="upload">ADD-ITEM</button>
+  </div>
+  <div>
+    <input class='removeName' type="text">
+    <button class='removeItem'>REMOVE</button>
+  </div>
 
     <script src="script.js"></script>
   </body>
