--- a/menue/menue.html
+++ b/menue/menue.html
@@ -136,6 +136,7 @@
             <div id=order>
                     <table id=items>
                     </table>
+                    <button onclick="checkout()" id=checkout>Go to checkout</button>
             </div>
     </body>
 </html>
