finnished manager Page

--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -12,62 +12,41 @@
     <h1>The Menu</h1><hr>
       <div class="menu-box">
         <div class="menu-items">
-<<<<<<< Updated upstream
           <ul class='menue'>
-            <li><img src="./img/large-fry.jpg" alt="a comically large fry" /><p>30$</p></li>
-            <li><img src="./img/endless-chicken-nuggets.jpg" alt="endless chicken nuggets" /><p>30$</p></li>
-            <li><img src="./img/lettuce.jpg" alt="lettuce commence" /><p>30$</p></li>
-            <li><img src="./img/hot-dog-stack.jpg" alt="hot dog jenga" /><p>30$</p></li>
-            <li><img src="./img/shrimp.jpg" alt="shucked shrimp" /><p>30$</p></li>
-            <li><img src="./img/shrimp-with-head.jpg" alt="unshucked shrimp" /><p>30$</p></li>
-            <li><img src="./img/totally-sugar.jpg" alt="just regular old sugar" /><<p>30$</p>/li>
-            <li><img src="./img/tri-wich.jpg" alt="the ultimate sandwich" /><p>30$</p></li>
-            <li><img src="./img/whatever-this-is.jpg" alt="how did we eat this stuff when we were kids"/><p>30$</p></li>
-            <li><img src="./img/wood.jpg" alt="fiber globule" /><p>30$</p></li>
-            <li><img src="./img/fortnite-burger.jpg" alt="fortniteburger.net" /><p>30$</p></li>
-            <li><img src="./img/rare-iron.jpg" alt="medium-rare iron" /><p>30$</p></li>
-            <li><img src="./img/cooked-iron.png" alt="well-done iron" /><p>30$</p></li>
-            <li><img src="./img/cow.jpg" alt="protein globule. also vegan" /><p>30$</p></li>
-            <li><img src="./img/velvet.png" alt="unfortunately not made of the color red"/><<p>30$</p>/li>
-            <li><img src="./img/water-sausage.jpg" alt="Typhia L."/><p>30$</p></li>
-            <li><img src="./img/eaten-cob.jpg" alt="sorry i got hungry :(" /><p>30$</p></li>
-            <li><img src="./img/eaten-sandwich.gif" alt="sorry man i just couldn't help myself :("/><p>30$</p></li>
-            <li><img src="./img/all-consuming-void.jpg" alt="great for dieting and our vegan option" /><p>30$</p></li>
-            <li><img src="./img/chug-jug.png" alt="the only drink available"><p>30$</p></li>
-        </ul>
-=======
-          <dl>
-            <dt><img src="./img/large-fry.jpg" alt="a comically large fry" /></dt>
-            <dt><img src="./img/endless-chicken-nuggets.jpg" alt="endless chicken nuggets" /></dt>
-            <dt><img src="./img/lettuce.jpg" alt="lettuce commence" /></dt>
-            <dt><img src="./img/hot-dog-stack.jpg" alt="hot dog jenga" /></dt>
-            <dt><img src="./img/shrimp.jpg" alt="shucked shrimp" /></dt>
-            <dt><img src="./img/shrimp-with-head.jpg" alt="unshucked shrimp" /></dt>
-            <dt><img src="./img/totally-sugar.jpg" alt="just regular old sugar" /></dt>
-            <dt><img src="./img/tri-wich.jpg" alt="the ultimate sandwich" /></dt>
-            <dt><img src="./img/whatever-this-is.jpg" alt="how did we eat this stuff when we were kids"/></dt>
-            <dt><img src="./img/wood.jpg" alt="fiber globule" /></dt>
-            <dt><img src="./img/fortnite-burger.jpg" alt="fortniteburger.net" /></dt>
-            <dt><img src="./img/rare-iron.jpg" alt="medium-rare iron" /></dt>
-            <dt><img src="./img/cooked-iron.png" alt="well-done iron" /></dt>
-            <dt><img src="./img/cow.jpg" alt="protein globule. also vegan" /></dt>
-            <dt><img src="./img/velvet.png" alt="unfortunately not made of the color red"/></dt>
-            <dt><img src="./img/water-sausage.jpg" alt="Typhia L."/></dt>
-            <dt><img src="./img/eaten-cob.jpg" alt="sorry i got hungry :(" /></dt>
-            <dt><img src="./img/eaten-sandwich.gif" alt="sorry man i just couldn't help myself :("/></dt>
-            <dt><img src="./img/all-consuming-void.jpg" alt="great for dieting and our vegan option" /></dt>
-            <dt><img src="./img/chug-jug.png" alt="the only drink available"></dt>
-        </dl>
->>>>>>> Stashed changes
+            <li><img src="./img/large-fry.jpg" alt="a comically large fry" /><p>One large Fry: 30$</p></li>
+            <li><img src="./img/endless-chicken-nuggets.jpg" alt="endless chicken nuggets" /><p>chicken nuggets: 30$</p></li>
+            <li><img src="./img/lettuce.jpg" alt="lettuce commence" /><p>Salad: 30$</p></li>
+            <li><img src="./img/hot-dog-stack.jpg" alt="hot dog jenga" /><p>Hot Dogs: 30$</p></li>
+            <li><img src="./img/shrimp.jpg" alt="shucked shrimp" /><p>Shrimp: 30$</p></li>
+            <li><img src="./img/shrimp-with-head.jpg" alt="unshucked shrimp" /><p>Unshucked Shrimp: 30$</p></li>
+            <li><img src="./img/totally-sugar.jpg" alt="just regular old sugar" /><<p>Sugar: 30$</p></li>
+            <li><img src="./img/tri-wich.jpg" alt="the ultimate sandwich" /><p>Sandwiches: 30$</p></li>
+            <li><img src="./img/whatever-this-is.jpg" alt="how did we eat this stuff when we were kids"/><p>School Lunch: 30$</p></li>
+            <li><img src="./img/wood.jpg" alt="fiber globule" /><p>Soft Tree Bark: 30$</p></li>
+            <li><img src="./img/fortnite-burger.jpg" alt="fortniteburger.net" /><p>Cheezburger: 30$</p></li>
+            <li><img src="./img/rare-iron.jpg" alt="medium-rare iron" /><p>Iron Supliment: 30$</p></li>
+            <li><img src="./img/cooked-iron.png" alt="well-done iron" /><p>Super Iron: 30$</p></li>
+            <li><img src="./img/cow.jpg" alt="protein globule. also vegan" /><p>Steak: 30$</p></li>
+            <li><img src="./img/velvet.png" alt="unfortunately not made of the color red"/><<p>Cake: 30$</p></li>
+            <li><img src="./img/water-sausage.jpg" alt="Typhia L."/><p>Sausage: 30$</p></li>
+            <li><img src="./img/eaten-cob.jpg" alt="sorry i got hungry :(" /><p>Corn: 30$</p></li>
+            <li><img src="./img/eaten-sandwich.gif" alt="sorry man i just couldn't help myself :("/><p>Uncooked Sandwich: 30$</p></li>
+            <li><img src="./img/all-consuming-void.jpg" alt="great for dieting and our vegan option" /><p>Dark Matter:30$</p></li>
+            <li><img src="./img/chug-jug.png" alt="the only drink available"><p>Water: 30$</p></li>
+       
+          }
+          </ul>
 
     </div>
-<div>
+<div class='addSys'>
     <input class="nameNew" type="text" placeholder="Name" name="name" />
     <input class="costNew" type="text" placeholder="$" name="cost" />
-    <input type="file" name="img" id="file" accept="image" class='fileUploader'/>
+    <input type="file" name="file" id="file" accept="image" class='fileUploader'/>
+    <label for="file">Click to select Image</label>
+
     <button type="submit" id="upload">ADD-ITEM</button>
   </div>
-  <div>
+  <div class='removeSys'>
     <input class='removeName' type="text">
     <button class='removeItem'>REMOVE</button>
   </div>
