--- a/menue/menue.html
+++ b/menue/menue.html
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-            <h1>PLACEHOLDER RESTAURANT</h1>
+            <h1>Resturante de le Stevens</h1>
         <div id=main>
             <div id=menu>
                 <div class=title>Menu</div>
@@ -142,5 +142,7 @@
                     </table>
                     <button onclick="checkout()" id=checkout>Go to checkout</button>
             </div>
+        </div>
+        <button onclick="window.location.href='../Login/login.html'" id=log-out>log out</button>
     </body>
 </html>
