--- a/payment/payment.html
+++ b/payment/payment.html
@@ -16,6 +16,7 @@
         
         <div class="tablehead">
           <h1 id="total">Total:$</h1>
+          
         </div>
         <div class="content">
           <table id=items>
@@ -34,7 +35,7 @@
           <button class="hvr-ripple-out" id="hideme">Pick Up</button>
           <button class="hvr-ripple-out" id="showme">Deliver</button>
 
-          <a href="../recipt-page/reciept.html" id="purchase">Purchase</a>
+          <a href="#" id="purchase">Purchase</a>
         </div>
 
 
