--- a/recipt-page/reciept.html
+++ b/recipt-page/reciept.html
@@ -6,7 +6,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="../menue/script.js"></script>
         <script src="https://smtpjs.com/v3/smtp.js"></script> 
-        <script src="script.js"></script>
+            <script src="script.js"></script>
+
 </head>
 
 
@@ -24,7 +25,7 @@
 
             </div>
         </div>
-        <button id="send">Checkout</button>
+        <button id="send" onClick="initDownload()">Checkout</button>
     </div>
 
     </div>
