--- a/recipt-page/reciept.html
+++ b/recipt-page/reciept.html
@@ -25,7 +25,7 @@
 
             </div>
         </div>
-        <button id="send" onClick="initDownload()">Checkout</button>
+        <button id="send">Checkout</button>
     </div>
 
     </div>
