unifying the styling

--- a/menue/menue.html
+++ b/menue/menue.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Resturante de le Stevens</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="script.js"></script>
@@ -15,16 +18,16 @@
                 <div class=title>Menu</div>
                 <table id=food>
                     <tr>
-                        <td id=fry0><img src="../manager-page/img/large-fry.jpg"></td>
-                        <td><div>fry</div></td>
-                        <td><div id=fry1>$0.01</div></td>
-                        <td><button onclick="addItem(this)" id=fry>Add</button></td>
+                        <td id=Fry0><img src="../manager-page/img/large-fry.jpg"></td>
+                        <td><div>Fry</div></td>
+                        <td><div id=Fry1>$0.01</div></td>
+                        <td><button onclick="addItem(this)" id=Fry>Add</button></td>
                     </tr>
                     <tr>
-                        <td id=ChickenNuggets0><img src="../manager-page/img/endless-chicken-nuggets.jpg"></td>
-                        <td><div>ChickenNuggets</div></td>
-                        <td><div id=ChickenNuggets1>$1</div></td>
-                        <td><button onclick="addItem(this)" id=ChickenNuggets>Add</button></td>
+                        <td id=Chicken-Nuggets0><img src="../manager-page/img/endless-chicken-nuggets.jpg"></td>
+                        <td><div>Chicken-Nuggets</div></td>
+                        <td><div id=Chicken-Nuggets1>$1</div></td>
+                        <td><button onclick="addItem(this)" id=Chicken-Nuggets>Add</button></td>
                     </tr>
                     <tr>
                         <td id=Lettuce0><img src="../manager-page/img/lettuce.jpg"></td>
@@ -63,10 +66,10 @@
                         <td><button onclick="addItem(this)" id=Sandwich>Add</button></td>
                     </tr>
                     <tr>
-                        <td id=School-food0><img src="../manager-page/img/whatever-this-is.jpg"></td>
-                        <td><div>School-food</div></td>
-                        <td><div id=School-food1>$1.25</div></td>
-                        <td><button onclick="addItem(this)" id=School-food>Add</button></td>
+                        <td id=School-Food0><img src="../manager-page/img/whatever-this-is.jpg"></td>
+                        <td><div>School-Food</div></td>
+                        <td><div id=School-Food1>$1.25</div></td>
+                        <td><button onclick="addItem(this)" id=School-Food>Add</button></td>
                     </tr>
                     <tr>
                         <td id=Wood0><img src="../manager-page/img/wood.jpg"></td>
@@ -87,9 +90,9 @@
                         <td><button onclick="addItem(this)" id=Rare-Iron>Add</button></td>
                     </tr>
                     <tr>
-                        <td id=Cooked-iron0><img src="../manager-page/img/cooked-iron.png"></td>
-                        <td><div>Cooked-iron</div></td>
-                        <td><div id=Cooked-iron1>$0.11</div></td>
+                        <td id=Cooked-Iron0><img src="../manager-page/img/cooked-iron.png"></td>
+                        <td><div>Cooked-Iron</div></td>
+                        <td><div id=Cooked-Iron1>$0.11</div></td>
                         <td><button onclick="addItem(this)" id=Cooked-iron>Add</button></td>
                     </tr>
                     <tr>
@@ -100,7 +103,7 @@
                     </tr>
                     <tr>
                         <td id=Velvet0><img src="../manager-page/img/velvet.png"></td>
-                        <td><div>velvet</div></td>
+                        <td><div>Velvet</div></td>
                         <td><div id=Velvet1>$10</div></td>
                         <td><button onclick="addItem(this)" id=Velvet>Add</button></td>
                     </tr>
