--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -23,7 +23,7 @@
             <li><img src="./img/hot-dog-stack.jpg" alt="hot dog jenga" /><p>$1</p></li>
             <li><img src="./img/shrimp.jpg" alt="shucked shrimp" /><p>$2</p></li>
             <li><img src="./img/shrimp-with-head.jpg" alt="unshucked shrimp" /><p>$4</p></li>
-            <li><img src="./img/totally-sugar.jpg" alt="just regular old sugar" /><p>$0.75</p>/li>
+            <li><img src="./img/totally-sugar.jpg" alt="just regular old sugar" /><p>$0.75</p></li>
             <li><img src="./img/tri-wich.jpg" alt="the ultimate sandwich" /><p>$5</p></li>
             <li><img src="./img/whatever-this-is.jpg" alt="how did we eat this stuff when we were kids"/><p>$1.25</p></li>
             <li><img src="./img/wood.jpg" alt="fiber globule" /><p>$1</p></li>
@@ -31,7 +31,7 @@
             <li><img src="./img/rare-iron.jpg" alt="medium-rare iron" /><p>$0.05</p></li>
             <li><img src="./img/cooked-iron.png" alt="well-done iron" /><p>$0.11</p></li>
             <li><img src="./img/cow.jpg" alt="protein globule. also vegan" /><p>$2000</p></li>
-            <li><img src="./img/velvet.png" alt="unfortunately not made of the color red"/><p>$10</p>/li>
+            <li><img src="./img/velvet.png" alt="unfortunately not made of the color red"/><p>$10</p></li>
             <li><img src="./img/water-sausage.jpg" alt="Typhia L."/><p>$2</p></li>
             <li><img src="./img/eaten-cob.jpg" alt="sorry i got hungry :(" /><p>$0.50</p></li>
             <li><img src="./img/eaten-sandwich.gif" alt="sorry man i just couldn't help myself :("/><p>$0.50</p></li>
@@ -47,10 +47,7 @@
 
     <button type="submit" id="upload">ADD-ITEM</button>
   </div>
-  <div class='removeSys'>
-    <input class='removeName' type="text">
-    <button class='removeItem'>REMOVE</button>
-  </div>
+
 
     <script src="script.js"></script>
   </body>
