--- a/payment/payment.html
+++ b/payment/payment.html
@@ -28,7 +28,9 @@
 
 
         <div class="tablehead">
-         <a href="#" id='total'></a>
+         <a href="../recipt-page/reciept.html" id='total'>
+    
+        </a>
         </div>
 
 
@@ -47,7 +49,7 @@
         <div class="choose">
           <button class="method" id="pick">Pick Up</button>
          
-    <button class="open-button" onclick="openForm()">Deliver</button>
+    <button class="open-button" id='dev'onclick="openForm()">Deliver</button>
 
 <div class="form-popup" id="myForm">
   <form  class="form-container">
