converted the ul to a desc list and changed some styling (WIP)

--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -16,7 +16,27 @@
     <h1>The Menu</h1><hr>
       <div class="menu-box">
         <div class="menu-items">
-          <ul class='menue'>
+          <dl class='menue'>
+            <dt><img src="./img/large-fry.jpg" alt="a comically large fry" /><p>$0.01</p></dt>
+            <dt><img src="./img/endless-chicken-nuggets.jpg" alt="endless chicken nuggets" /><p>$1</p></dt>
+            <dt><img src="./img/lettuce.jpg" alt="lettuce commence" /><p>$0.50</p></dt>
+            <dt><img src="./img/hot-dog-stack.jpg" alt="hot dog jenga" /><p>$1</p></dt>
+            <dt><img src="./img/shrimp.jpg" alt="shucked shrimp" /><p>$2</p></dt>
+            <dt><img src="./img/shrimp-with-head.jpg" alt="unshucked shrimp" /><p>$4</p></dt>
+            <dt><img src="./img/totally-sugar.jpg" alt="just regular old sugar" /><p>$0.75</p></dt>
+            <dt><img src="./img/tri-wich.jpg" alt="the ultimate sandwich" /><p>$5</p></dt>
+            <dt><img src="./img/whatever-this-is.jpg" alt="how did we eat this stuff when we were kids"/><p>$1.25</p></dt>
+            <dt><img src="./img/wood.jpg" alt="fiber globule" /><p>$1</p></dt>
+            <dt><img src="./img/fortnite-burger.jpg" alt="fortniteburger.net" /><p>$7.50</p></dt>
+            <dt><img src="./img/rare-iron.jpg" alt="medium-rare iron" /><p>$0.05</p></dt>
+            <dt><img src="./img/cooked-iron.png" alt="well-done iron" /><p>$0.11</p></dt>
+            <dt><img src="./img/cow.jpg" alt="protein globule. also vegan" /><p>$2000</p></dt>
+            <dt><img src="./img/velvet.png" alt="unfortunately not made of the color red"/><p>$10</p></dt>
+            <dt><img src="./img/water-sausage.jpg" alt="Typhia L."/><p>$2</p></dt>
+            <dt><img src="./img/eaten-cob.jpg" alt="sorry i got hungry :(" /><p>$0.50</p></dt>
+            <dt><img src="./img/eaten-sandwich.gif" alt="sorry man i just couldn't help myself :("/><p>$0.50</p></dt>
+            <dt><img src="./img/all-consuming-void.jpg" alt="great for dieting and our vegan option" /><p>$0</p></dt>
+            <dt><img src="./img/chug-jug.png" alt="the only drink available"><p>$25</p></dt>
         </ul>
     </div>
 <div class='addSys'>
