updated Jquery version

--- a/menue/menue.html
+++ b/menue/menue.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Resturante de le Stevens</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,8 +22,7 @@
     <div id="main">
       <div id="menu">
         <div class="title">Menu</div>
-        <table id="food">
-        </table>
+        <table id="food"></table>
       </div>
       <div id="order">
         <div class="title">Cart</div>
