added logout button to Manager page

--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <a href='#' class ='logout'>Log-Out</a>
     <h1>The Menu</h1><hr>
       <div class="menu-box">
         <div class="menu-items">
