--- a/payment/payment.html
+++ b/payment/payment.html
@@ -13,8 +13,8 @@
   </head>
 
   <body>
-<div class="background">
-    <canvas id="myCanvas" > </canvas>
+
+    <div class="backImage">
       <article>
         <h1 id='Name'>Resturant de le Stevens</h1>
         <div class="scroller">
