added dynamically controllable Tax Rate to manager Page and receipt

--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -28,7 +28,11 @@
     <label for="file">Click to select Image</label>
 
     <button type="submit" id="upload">ADD-ITEM</button>
+    <br/>
+    <input type="number" class='tax' placeholder="Enter Tax %">
+    <button class='applyTax'>Enter Tax</button>
   </div>
+
 
 
     <script src="script.js"></script>
