added total for the current cart

--- a/menue/menue.html
+++ b/menue/menue.html
@@ -27,6 +27,8 @@
       <div id="order">
         <div class="title">Cart</div>
         <table id="items"></table>
+        <h2>Total</h2>
+        <div id=total></div>
         <button onclick="checkout()" id="checkout">Go to checkout</button>
       </div>
     </div>
