--- a/recipt-page/reciept.html
+++ b/recipt-page/reciept.html
@@ -47,9 +47,11 @@
         </div>
         <div class="thanks">
             <p>Hello </p>
+            <div id="tt"></div>
+            
             <button id="send">Checkout</button>
+            
         </div>
         </div>
-
 </body>
 </html>
