--- a/menue/menue.html
+++ b/menue/menue.html
@@ -28,7 +28,7 @@
         <div class="title">Cart</div>
         <table id="items"></table>
         <h2>Total</h2>
-        <div id=total></div>
+        <div id="total"></div>
         <button onclick="checkout()" id="checkout">Go to checkout</button>
       </div>
     </div>
