fixed issue with reciepts and manager pages

--- a/manager-page/manager.html
+++ b/manager-page/manager.html
@@ -14,7 +14,7 @@
 
   <body>
     <a href='#' class ='logout'>Log-Out</a>
-    <h1>The Menu</h1><hr>
+    <h1>The Menu</h1>
       <div class="menu-box">
         <div class="menu-items">
           <ul class='menue'>
