--- a/payment/payment.html
+++ b/payment/payment.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+    <script src="../manager-page/script.js"></script>
     <script src="../menue/script.js"></script>
     <script src="script.js"></script>
   </head>
